--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
-  REACT_APP_API_KEY=AIzaSyDpr__kcEM3DAfzFten8xPGM3NCl4d9E4Y
-  REACT_APP_AUTO_DOMAIN = nuiter-5102d.firebaseapp.com
-  REACT_APP_PROJECT_ID = nuiter-5102d
-  REACT_APP_STORAGE_BUCKET = nuiter-5102d.appspot.com
-  REACT_APP_MESSAGING_SENDER_ID = 955322310008
-  REACT_APP_APP_ID = 1:955322310008:web:fe93a96258b05673743c8d
+  REACT_APP_API_KEY=AIzaSyAmISiTXEFJOx_lR71m70C61dFpQxlfnH0
+  REACT_APP_AUTO_DOMAIN = tttt-15086.firebaseapp.com
+  REACT_APP_PROJECT_ID = tttt-15086
+  REACT_APP_STORAGE_BUCKET = tttt-15086.appspot.com
+  REACT_APP_MESSAGING_SENDER_ID = 746876143646
+  REACT_APP_APP_ID = 1:746876143646:web:167c1892a5f66f69f8460f
